syntax = "proto3";
package iritamod.opb;

import "gogoproto/gogo.proto";

option go_package = "github.com/bianjieai/iritamod/modules/opb/types";
option (gogoproto.goproto_getters_all) = false;

// Params defines the parameters for the OPB module.
message Params {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = false;

  string base_token_denom = 1;
  string point_token_denom = 2;
  string base_token_manager = 3;
  bool unrestricted_token_transfer = 4;
}
